@@ -1,3 +1,8 @@
+2016-02-16  Simon Marchi  <simon.marchi@ericsson.com>
+
+	* gdb.trace/save-trace.exp: Change relative path to be in the
+	standard output directory.
+
 2016-02-15  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.arch/i386-prologue.c: Add missing prototypes.
